--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
 
-  <h1 id="title">To-Do List</h1>z
+  <h1 id="title">To-Do List</h1>
 
   <form id="taskForm">
     <div id="task-div">
