--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </div>
 
   <!-- Display tasks -->
-  <div id="container">
+  <div class="container">
     <ul id="taskList"></ul>
     <h2 class="awaiting"><i>Awaiting new tasks...</i></h2>
   </div>
